crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/052.cypher
MATCH (n) RETURN n; CALL apoc.schema.assert({},{},true)
